Actualizadas las traducciones.

--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -606,7 +606,7 @@
     "field-required": "Field required: %field%",
     "fields": "Fields",
     "file": "File",
-    "file-audio-codec-not-accepted": "Error al enviar el archivo de audio %fileName% porque su códec %codec% no está permitido. Los códecs permitidos son: %supported%",
+    "file-audio-codec-not-accepted": "Error sending audio file %fileName% because its codec %codec% is not allowed. Allowed codecs are: %supported%",
     "file-extension-not-accepted": "Failed to send file %fileName% because its extension is not allowed. The allowed extensions are: %accepted%",
     "file-name": "File name",
     "file-not-exists": "File not exists: %fileName%",
@@ -1340,7 +1340,7 @@
     "second-trimester": "Second trimester",
     "select": "Select",
     "select-all": "Select all",
-    "select-content-for": "Selecciona contenido para %content%",
+    "select-content-for": "Select content for %content%",
     "select-none": "Select none",
     "select-plugin-zip-file": "Select plugin zip file:",
     "select-user": "Select User",
