--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -1363,7 +1363,7 @@
     "sent-a-picture": "Enviou unha imaxe",
     "sent-a-video": "Enviou un video",
     "sent-message-by": "Enviado por %nick% o %date%",
-    "sent-messages": "Mensajes enviados",
+    "sent-messages": "Mensaxes enviados",
     "sepa-suffix": "sufixo SEPA",
     "september": "Setembro",
     "sequences": "Secuencias",
