--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -695,7 +695,7 @@
     "generated-supplier-orders": "0 ordini fornitore generati.",
     "global-dto": "Sconto complessivo",
     "global-dto-2": "DTO globale 2",
-    "graphics": "Grafica",
+    "graphics": "Grafici",
     "greater-than": "Più grande di",
     "grid-help": "Control + Invio per andare a capo. Puoi spostare o eliminare le righe facendo clic sul numero di riga.",
     "group": "Gruppo",
