--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -606,7 +606,7 @@
     "field-required": "Pole wymagane: %field%",
     "fields": "Pola",
     "file": "Plik",
-    "file-audio-codec-not-accepted": "Error al enviar el archivo de audio %fileName% porque su códec %codec% no está permitido. Los códecs permitidos son: %supported%",
+    "file-audio-codec-not-accepted": "Błąd podczas wysyłania pliku audio %fileName%, ponieważ jego kodek %codec% nie jest dozwolony. Dozwolone kodeki to: %supported%",
     "file-extension-not-accepted": "Error al enviar el archivo %fileName% porque su extensión no está permitida. Las extensiones permitidas son: %accepted%",
     "file-name": "Nazwa pliku",
     "file-not-exists": "Plik nie istnieje: %fileName%",
@@ -695,7 +695,7 @@
     "generated-supplier-orders": "Wygenerowano %quantity% zamówień od dostawców.",
     "global-dto": "Globalne Dto",
     "global-dto-2": "Dto. global 2",
-    "graphics": "Gráficos",
+    "graphics": "Grafika",
     "greater-than": "Większy niż",
     "grid-help": "Control + Enter do wstawienia nowej linii. Możesz przesuwać lub usuwać linie klikając numer linii.",
     "group": "Grupa",
@@ -835,7 +835,7 @@
     "languages-es_AR": "Hiszpański (Argentyna)",
     "languages-es_CL": "Espanol (Chile)",
     "languages-es_CO": "Hiszpański (Kolumbia)",
-    "languages-es_CR": "Español (Costa Rica)",
+    "languages-es_CR": "Hiszpański (Kostaryka)",
     "languages-es_DO": "Hiszpański (Rep. Dominikana)",
     "languages-es_EC": "Hiszpański (Ekwador)",
     "languages-es_ES": "Hiszpański (Hiszpania)",
@@ -850,7 +850,7 @@
     "languages-it_IT": "Włoski",
     "languages-pl_PL": "Polaco",
     "languages-pt_BR": "Portugués (Brasil)",
-    "languages-pt_PT": "Portugués",
+    "languages-pt_PT": "Portugalski",
     "languages-va_ES": "Walencja",
     "last-activity": "Ostatnia aktywność",
     "last-bimester": "Ostatni bimestre",
@@ -1303,7 +1303,7 @@
     "request-sent": "Prośba wysłana",
     "required": "Wymagane",
     "requires-core": "Wymaga FacturaScripts %version%",
-    "reserved": "Reservado",
+    "reserved": "Zarezerwowane",
     "reset": "Resetuj",
     "resource": "Zasób",
     "respond": "Responder",
@@ -1340,7 +1340,7 @@
     "second-trimester": "Drugi trymestr",
     "select": "Wybierz",
     "select-all": "Zaznacz wszystko",
-    "select-content-for": "Selecciona contenido para %content%",
+    "select-content-for": "Wybierz zawartość dla %content%",
     "select-none": "Nie wybieraj nic",
     "select-plugin-zip-file": "Wybierz wtyczkę (zip):",
     "select-user": "Wybierz użytkownika",
@@ -1617,7 +1617,7 @@
     "valid-for-day": "Válido para un día",
     "validate": "Zatwierdź",
     "validate-iban": "Waliduj IBAN",
-    "validate-whatsapp-not-connection": "Error al validar el número de WhatsApp, no se pudo establecer conexión con el servidor de WhatsApp",
+    "validate-whatsapp-not-connection": "Błąd weryfikacji numeru WhatsApp, nie udało się nawiązać połączenia z serwerem WhatsApp",
     "valuation-type": "Typ wyceny",
     "value": "Wartość",
     "value-x": "Wartość X",
