- Añadido soporte para sslmode y endpoint en las conexiones a PostgreSQL. - Mejorada la detección de bases de datos de 2017 para poner la codificación adecuada en el archivo config.php

--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -940,7 +940,7 @@
     "maximum-amount-without-cifnif": "Maximum amount without CIF\/NIF",
     "maximum-stock": "Maximum stock",
     "may": "May",
-    "media-whatsapp-not-upload": "Error uploading media file to WhatsApp server: %file%",
+    "media-whatsapp-not-upload": "Error uploading media file to the WhatsApp server: %file%",
     "mega-search": "Mega-Search",
     "memcache": "Memcache",
     "memcache-clear": "Memcache cleared.",
