--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -695,7 +695,7 @@
     "generated-supplier-orders": "%quantity% hornitzaile eskari sortu dira.",
     "global-dto": "Deskontu globala",
     "global-dto-2": "2. deskontu globala",
-    "graphics": "Gráficos",
+    "graphics": "Grafikoak",
     "greater-than": "Baino handiagoa",
     "grid-help": "Kontrol + onartu lerro jauzia egiteko. Lerroak mugitu edo ezabatu ditzakezu lerroaren zenbakian klik eginez.",
     "group": "Talde",
