--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -606,7 +606,7 @@
     "field-required": "Campo requerido: %field%",
     "fields": "Campos",
     "file": "Arquivo",
-    "file-audio-codec-not-accepted": "Error al enviar el archivo de audio %fileName% porque su códec %codec% no está permitido. Los códecs permitidos son: %supported%",
+    "file-audio-codec-not-accepted": "Erro ao enviar o arquivo de audio %fileName% porque o seu códec %codec% non está permitido. Os códecs permitidos son: %supported%",
     "file-extension-not-accepted": "Erro ó enviar o arquivo %fileName% porque a súa extensión non está permitida. As extensións permitidas son: %accepted%",
     "file-name": "Nome de arquivo",
     "file-not-exists": "O arquivo non existe %fileName%",
@@ -1617,7 +1617,7 @@
     "valid-for-day": "Válido para un día",
     "validate": "validar",
     "validate-iban": "Validar IBAN",
-    "validate-whatsapp-not-connection": "Error al validar el número de WhatsApp, no se pudo establecer conexión con el servidor de WhatsApp",
+    "validate-whatsapp-not-connection": "Erro ao validar o número de WhatsApp, non se puido establecer conexión co servidor de WhatsApp",
     "valuation-type": "Tipo de valoración",
     "value": "Valor",
     "value-x": "Valor X",
