--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -5,7 +5,7 @@
     "accept-all": "Akceptuj wszystko",
     "accept-data": "Akceptować zmiany lub operację",
     "accept-privacy-policy": "Acepta la política de privacidad",
-    "accepted": "Aceptado",
+    "accepted": "Zaakceptowane",
     "accepts-emails-commas": "Akceptuje wiele adresów e-mail oddzielonych przecinkami",
     "access-denied": "Dostęp zabroniony",
     "access-denied-p": "Nie masz uprawnień do przeglądania tych danych. Jeśli uważasz, że powinieneś mieć dostęp do tych danych, skontaktuj się z administratorem, aby przyznał Ci dostęp.",
