--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -695,7 +695,7 @@
     "generated-supplier-orders": "%quantity% pedidos de proveedor generados.",
     "global-dto": "Dto. global",
     "global-dto-2": "Dto. global 2",
-    "graphics": "Gráficos",
+    "graphics": "Grafika",
     "greater-than": "Mayor que",
     "grid-help": "Control + intro para salto de línea. Puedes mover o eliminar las líneas haciendo clic en el número de línea.",
     "group": "Grupo",
