--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -1617,7 +1617,7 @@
     "valid-for-day": "Válido por um dia",
     "validate": "Validar",
     "validate-iban": "Validar IBAN",
-    "validate-whatsapp-not-connection": "Error al validar el número de WhatsApp, no se pudo establecer conexión con el servidor de WhatsApp",
+    "validate-whatsapp-not-connection": "Erro ao validar o número do WhatsApp, não foi possível estabelecer conexão com o servidor do WhatsApp",
     "valuation-type": "Tipo de avaliação",
     "value": "Valor",
     "value-x": "Valor X",
