Actualizadas las traducciones.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -606,7 +606,7 @@
     "field-required": "Campo requerido: %field%",
     "fields": "Campos",
     "file": "Archivo",
-    "file-audio-codec-not-accepted": "Error al enviar el archivo de audio %fileName% porque su códec %codec% no está permitido. Los códecs permitidos son: %supported%",
+    "file-audio-codec-not-accepted": "Chyba při odesílání audio souboru %fileName%, protože jeho kodek %codec% není povolen. Povolené kodeky jsou: %supported%",
     "file-extension-not-accepted": "Chyba při odesílání souboru %fileName% protože jeho přípona není povolena. Povolené přípony jsou: %accepted%",
     "file-name": "Nombre de archivo",
     "file-not-exists": "No existe el archivo: %fileName%",
@@ -1138,6 +1138,8 @@
     "percentage-vat": "% Impuesto",
     "period": "Periodo",
     "personalized": "Personalizované",
+    "pgsql-endpoint": "Endpoint PostgreSQL",
+    "pgsql-ssl-mode": "Modo SSL",
     "phase": "Fase",
     "phone": "Teléfono",
     "phone2": "Teléfono 2",
