--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1138,6 +1138,8 @@
     "percentage-vat": "BEZ %",
     "period": "Denboraldia",
     "personalized": "Pertsonalizatua",
+    "pgsql-endpoint": "Endpoint PostgreSQL",
+    "pgsql-ssl-mode": "Modo SSL",
     "phase": "Fasea",
     "phone": "Telefonoa",
     "phone2": "2. telefonoa",
@@ -1340,7 +1342,7 @@
     "second-trimester": "Bigarren hiruhilekoa",
     "select": "Aukeratu",
     "select-all": "Guztiak hautatu",
-    "select-content-for": "Hautatu edukia %content%rako",
+    "select-content-for": "%content%rako edukia hautatu",
     "select-none": "Bat ere ez hautatu",
     "select-plugin-zip-file": "Hautatu plugin zip fitxategia:",
     "select-user": "Aukeratu erabiltzailea",
