--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -1138,6 +1138,8 @@
     "percentage-vat": "% TVA",
     "period": "Période",
     "personalized": "Personnalisé",
+    "pgsql-endpoint": "Endpoint PostgreSQL",
+    "pgsql-ssl-mode": "Modo SSL",
     "phase": "Phase",
     "phone": "téléphone",
     "phone2": "Téléphone 2",
@@ -1363,7 +1365,7 @@
     "sent-a-picture": "Envoi d'une image",
     "sent-a-video": "Envoi d'une vidéo",
     "sent-message-by": "Soumis par %nick% le %date%.",
-    "sent-messages": "Mensajes enviados",
+    "sent-messages": "Messages envoyés",
     "sepa-suffix": "Suffixe SEPA",
     "september": "Septembre",
     "sequences": "Numérotations",
@@ -1617,7 +1619,7 @@
     "valid-for-day": "Valable pour une journée",
     "validate": "Valider",
     "validate-iban": "Valider IBAN",
-    "validate-whatsapp-not-connection": "Erreur lors de la validation du numéro WhatsApp, connexion au serveur WhatsApp impossible.",
+    "validate-whatsapp-not-connection": "Erreur lors de la validation du numéro WhatsApp, impossible de se connecter au serveur WhatsApp.",
     "valuation-type": "Type d'évaluation",
     "value": "Valeur",
     "value-x": "Valeur X",
