--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -606,7 +606,7 @@
     "field-required": "Campo requerido: %field%",
     "fields": "Campos",
     "file": "Arquivo",
-    "file-audio-codec-not-accepted": "Erro ao enviar o arquivo de audio %fileName% porque o seu códec %codec% non está permitido. Os códecs permitidos son: %supported%",
+    "file-audio-codec-not-accepted": "Erro ao enviar o ficheiro de audio %fileName% porque o seu códec %codec% non está permitido. Os códecs permitidos son: %supported%",
     "file-extension-not-accepted": "Erro ó enviar o arquivo %fileName% porque a súa extensión non está permitida. As extensións permitidas son: %accepted%",
     "file-name": "Nome de arquivo",
     "file-not-exists": "O arquivo non existe %fileName%",
@@ -1138,6 +1138,8 @@
     "percentage-vat": "% IVE",
     "period": "Periodo",
     "personalized": "Personalizado",
+    "pgsql-endpoint": "Endpoint PostgreSQL",
+    "pgsql-ssl-mode": "Modo SSL",
     "phase": "Fase",
     "phone": "Teléfono",
     "phone2": "Teléfono 2",
