--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1138,6 +1138,8 @@
     "percentage-vat": "% IVA",
     "period": "periodo",
     "personalized": "Personalizzato",
+    "pgsql-endpoint": "Endpoint PostgreSQL",
+    "pgsql-ssl-mode": "Modo SSL",
     "phase": "fase",
     "phone": "telefono",
     "phone2": "Telefono 2",
@@ -1363,7 +1365,7 @@
     "sent-a-picture": "Ha inviato un'immagine",
     "sent-a-video": "Ha inviato un video",
     "sent-message-by": "Inviato da %nick% il %date%",
-    "sent-messages": "Mensajes enviados",
+    "sent-messages": "Messaggi inviati",
     "sepa-suffix": "suffisso SEPA",
     "september": "Settembre",
     "sequences": "Sequenze",
