--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -81,7 +81,7 @@
     "allow-delete-data": "Zezwalaj na USUNIĘCIE",
     "allow-export": "Zezwól na eksport",
     "allow-get-data": "Zezwól na DOSTĘP",
-    "allow-import": "Permitir importar",
+    "allow-import": "Zezwól na import",
     "allow-marketing": "Zezwalaj na marketing",
     "allow-post-data": "Zezwól na MODYFIKACJĘ",
     "allow-put-data": "Zezwól na DODAWANIE",
@@ -786,7 +786,7 @@
     "invalid-request": "Nieprawidłowe żądanie",
     "invalid-user-can-permission": "Nieprawidłowe uprawnienie: %permission%. Dostępne uprawnienia to: dostęp, usuwanie, eksport, import, aktualizacja i tylko-dane-właściciela.",
     "invalid-web": "Nieprawidłowy adres sieciowy: %web%",
-    "invoice": "Factura",
+    "invoice": "Faktura",
     "invoice-email-subject": "Twoja faktura %code%",
     "invoice-email-text": "Szanowny kliencie, w załączeniu przesyłamy fakturę odpowiadającą świadczonym usługom. Jeśli masz jakiekolwiek pytania, możesz odpowiedzieć na ten sam e-mail. Dziękujemy! Pozdrawiamy,",
     "invoice-has-no-receipts": "Faktura nie ma paragonów. Utwórz przynajmniej jeden z zakładki paragonów.",
@@ -1138,6 +1138,8 @@
     "percentage-vat": "% Podatek",
     "period": "Okres",
     "personalized": "Personalizado",
+    "pgsql-endpoint": "Endpoint PostgreSQL",
+    "pgsql-ssl-mode": "Modo SSL",
     "phase": "Faza",
     "phone": "Telefon",
     "phone2": "Telefon 2",
@@ -1363,7 +1365,7 @@
     "sent-a-picture": "Envió una imagen",
     "sent-a-video": "Envió un video",
     "sent-message-by": "Enviado por %nick% el %date%",
-    "sent-messages": "Mensajes enviados",
+    "sent-messages": "Wysłane wiadomości",
     "sepa-suffix": "Przyrostek SEPA",
     "september": "Septiembre",
     "sequences": "Sekwencje",
