--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -606,7 +606,7 @@
     "field-required": "Erforderliches Feld: %field%",
     "fields": "Felder",
     "file": "archivieren",
-    "file-audio-codec-not-accepted": "Fehler beim Senden der Audiodatei %fileName%, da der Codec %codec% nicht erlaubt ist. Erlaubte Codecs sind: %supported%",
+    "file-audio-codec-not-accepted": "Fehler beim Senden der Audiodatei %fileName%, da der Codec %codec% nicht zulässig ist. Zulässige Codecs sind: %supported%",
     "file-extension-not-accepted": "Fehler beim Senden der Datei %fileName%, da ihre Erweiterung nicht erlaubt ist. Erlaubte Erweiterungen sind: %accepted%",
     "file-name": "Dateiname",
     "file-not-exists": "Datei existiert nicht: %fileName%",
@@ -1138,6 +1138,8 @@
     "percentage-vat": "% MwSt",
     "period": "Periode",
     "personalized": "Personalisiert",
+    "pgsql-endpoint": "Endpoint PostgreSQL",
+    "pgsql-ssl-mode": "Modo SSL",
     "phase": "Fase",
     "phone": "Telefon",
     "phone2": "Telefon 2",
