--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -606,7 +606,7 @@
     "field-required": "Campo obrigatório: %field%",
     "fields": "Campos",
     "file": "Arquivo",
-    "file-audio-codec-not-accepted": "Error al enviar el archivo de audio %fileName% porque su códec %codec% no está permitido. Los códecs permitidos son: %supported%",
+    "file-audio-codec-not-accepted": "Erro ao enviar o arquivo de áudio %fileName% porque seu codec %codec% não é permitido. Os codecs permitidos são: %supported%",
     "file-extension-not-accepted": "Erro ao enviar o arquivo %fileName% pois sua extensão não é permitida. As extensões permitidas são: %accepted%",
     "file-name": "Nome do ficheiro",
     "file-not-exists": "O Ficheiro não existe: %fileName%",
@@ -940,7 +940,7 @@
     "maximum-amount-without-cifnif": "Valor máximo sem CIF\/NIF",
     "maximum-stock": "Estoque máximo",
     "may": "Maio",
-    "media-whatsapp-not-upload": "Error al subir el archivo multimedia al servidor de WhatsApp: %file%",
+    "media-whatsapp-not-upload": "Erro ao enviar o arquivo multimídia para o servidor do WhatsApp: %file%",
     "mega-search": "MegaBuscador",
     "memcache": "Memcache",
     "memcache-clear": "Memcache foi limpa.",
@@ -1138,6 +1138,8 @@
     "percentage-vat": "% IVA",
     "period": "Período",
     "personalized": "Personalizado",
+    "pgsql-endpoint": "Endpoint PostgreSQL",
+    "pgsql-ssl-mode": "Modo SSL",
     "phase": "Fase",
     "phone": "Telefone",
     "phone2": "Telefone 2",
@@ -1617,7 +1619,7 @@
     "valid-for-day": "Válido por um dia",
     "validate": "Validar",
     "validate-iban": "Validar IBAN",
-    "validate-whatsapp-not-connection": "Error al validar el número de WhatsApp, no se pudo establecer conexión con el servidor de WhatsApp",
+    "validate-whatsapp-not-connection": "Erro ao validar o número do WhatsApp, não foi possível estabelecer conexão com o servidor do WhatsApp",
     "valuation-type": "Tipo de avaliação",
     "value": "Valor",
     "value-x": "Valor X",
