--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -1138,6 +1138,8 @@
     "percentage-vat": "% IVA",
     "period": "Período",
     "personalized": "Personalizado",
+    "pgsql-endpoint": "Endpoint PostgreSQL",
+    "pgsql-ssl-mode": "Modo SSL",
     "phase": "Fase",
     "phone": "telefone",
     "phone2": "Telefone 2",
