Actualizadas las traducciones.

--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -1139,7 +1139,7 @@
     "period": "Period",
     "personalized": "Personalized",
     "pgsql-endpoint": "Endpoint PostgreSQL",
-    "pgsql-ssl-mode": "Modo SSL",
+    "pgsql-ssl-mode": "PostgreSQL SSL mode",
     "phase": "Phase",
     "phone": "Phone",
     "phone2": "Phone 2",
@@ -1619,7 +1619,7 @@
     "valid-for-day": "Valid for one day",
     "validate": "Validate",
     "validate-iban": "Validate IBAN",
-    "validate-whatsapp-not-connection": "Error validating the WhatsApp number, unable to connect to the WhatsApp server",
+    "validate-whatsapp-not-connection": "Error validating the WhatsApp number, could not connect to the WhatsApp server.",
     "valuation-type": "Valuation type",
     "value": "Value",
     "value-x": "Value X",
