--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1138,7 +1138,7 @@
     "percentage-vat": "BEZ %",
     "period": "Denboraldia",
     "personalized": "Pertsonalizatua",
-    "pgsql-endpoint": "Endpoint PostgreSQL",
+    "pgsql-endpoint": "PostgreSQL amaiera",
     "pgsql-ssl-mode": "Modo SSL",
     "phase": "Fasea",
     "phone": "Telefonoa",
@@ -1603,7 +1603,7 @@
     "updated-model": "%model% (%key%) %desc% Eguneratua",
     "updater": "Eguneratzailea",
     "updates-available": "Eguneratzeak eskuragarri",
-    "updates-available-p": "FacturaScripts-en eguneratzeak eskuragarri daude. Mesedez, egin klik eguneratzailean eta deskargatu bertsio berria. Eguneratzeek akatsak zuzentzen dituzte eta funtzio berriak gehitzen dituzte.",
+    "updates-available-p": "FacturaScripts-en eguneratzeak eskuragarri daude. Mesedez, egin klik eguneratzaileetan eta deskargatu bertsio berria. Eguneratzeek akatsak zuzentzen dituzte eta funtzio berriak gehitzen dituzte.",
     "updating-attached-relations": "Erantsitako erlazioak eguneratzen",
     "upload-file": "Artxiboa kargatu",
     "uploaded-at": "Hemen kargatua",
