--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -4,7 +4,7 @@
     "accept": "Zaakceptować",
     "accept-all": "Akceptuj wszystko",
     "accept-data": "Akceptować zmiany lub operację",
-    "accept-privacy-policy": "Acepta la política de privacidad",
+    "accept-privacy-policy": "Akceptuję politykę prywatności",
     "accepted": "Zaakceptowane",
     "accepts-emails-commas": "Akceptuje wiele adresów e-mail oddzielonych przecinkami",
     "access-denied": "Dostęp zabroniony",
@@ -1139,7 +1139,7 @@
     "period": "Okres",
     "personalized": "Personalizado",
     "pgsql-endpoint": "Endpoint PostgreSQL",
-    "pgsql-ssl-mode": "Modo SSL",
+    "pgsql-ssl-mode": "Tryb SSL PostgreSQL",
     "phase": "Faza",
     "phone": "Telefon",
     "phone2": "Telefon 2",
@@ -1647,7 +1647,7 @@
     "view-order": "Zobacz zamówienie",
     "warehouse": "Magazyn",
     "warehouse-cant-be-same": "Magazyn źródłowy i docelowy nie mogą być takie same.",
-    "warehouse-must-be-same-business": "Los almacenes de origen y destino deben ser de la misma empresa",
+    "warehouse-must-be-same-business": "Magazyny pochodzenia i przeznaczenia muszą być z tej samej firmy",
     "warehouses": "Magazyny",
     "warning": "Uwaga",
     "warnings": "Ostrzeżenia",
