--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1139,7 +1139,7 @@
     "period": "Periode",
     "personalized": "Personalisiert",
     "pgsql-endpoint": "Endpoint PostgreSQL",
-    "pgsql-ssl-mode": "Modo SSL",
+    "pgsql-ssl-mode": "PostgreSQL-SSL-Modus",
     "phase": "Fase",
     "phone": "Telefon",
     "phone2": "Telefon 2",
