Actualizadas las traducciones.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -1342,7 +1342,7 @@
     "second-trimester": "Segundo trimestre",
     "select": "Seleccionar",
     "select-all": "Seleccionar todo",
-    "select-content-for": "Selecciona contenido para %content%",
+    "select-content-for": "Vyberte obsah pro %content%",
     "select-none": "Seleccionar nada",
     "select-plugin-zip-file": "Seleccionar plugin (zip):",
     "select-user": "Seleccionar usuario",
@@ -1365,7 +1365,7 @@
     "sent-a-picture": "Poslal obrázek",
     "sent-a-video": "Poslal video",
     "sent-message-by": "Odesláno uživatelem %nick% dne %date%",
-    "sent-messages": "Mensajes enviados",
+    "sent-messages": "Odeslané zprávy",
     "sepa-suffix": "Sufijo SEPA",
     "september": "Září",
     "sequences": "Secuencias",
