--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -940,7 +940,7 @@
     "maximum-amount-without-cifnif": "Gehieneko zenbatekoa IFK\/IFZ gabe",
     "maximum-stock": "Stock maximoa",
     "may": "Maiatza",
-    "media-whatsapp-not-upload": "Error al subir el archivo multimedia al servidor de WhatsApp: %file%",
+    "media-whatsapp-not-upload": "Errorea multimedia fitxategia WhatsApp zerbitzari igoan: %file%",
     "mega-search": "MegaBilaketa",
     "memcache": "Memcache",
     "memcache-clear": "Memcache garbituta.",
@@ -1139,7 +1139,7 @@
     "period": "Denboraldia",
     "personalized": "Pertsonalizatua",
     "pgsql-endpoint": "PostgreSQL amaiera",
-    "pgsql-ssl-mode": "Modo SSL",
+    "pgsql-ssl-mode": "PostgreSQL SSL modua",
     "phase": "Fasea",
     "phone": "Telefonoa",
     "phone2": "2. telefonoa",
