--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -1342,7 +1342,7 @@
     "second-trimester": "Segundo Trimestre",
     "select": "Selecionar",
     "select-all": "selecionar-todos",
-    "select-content-for": "Selecciona contenido para %content%",
+    "select-content-for": "Selecione o conteúdo para %content%",
     "select-none": "Selecionar nenhum",
     "select-plugin-zip-file": "Selecionar o arquivo zip do plugin:",
     "select-user": "Selecionar usuário",
