--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -1365,7 +1365,7 @@
     "sent-a-picture": "Envià una imatge",
     "sent-a-video": "S'ha enviat un vídeo",
     "sent-message-by": "Enviat per %nick% el %date%",
-    "sent-messages": "Mensajes enviados",
+    "sent-messages": "Missatges enviats",
     "sepa-suffix": "Sufix SEPA",
     "september": "Setembre",
     "sequences": "Sequències",
