Actualizadas las traducciones.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -1269,7 +1269,7 @@
     "refund-payment-concept": "Vrácení platebního dokladu %document%",
     "refunds": "Devoluciones",
     "register": "Registrar",
-    "register-install-ad": "Registrovat instalaci FacturaScripts",
+    "register-install-ad": "Zaregistrujte instalaci FacturaScripts",
     "register-install-ad-p": "Pokud zaregistrujete instalaci FacturaScripts, získáte 1 měsíc PRO sponzorství, které vám umožní stáhnout jeden z našich exkluzivních pluginů. Navíc nám to pomůže získat statistiky verzí jádra a PHP.",
     "register-installation": "Registrar instalación",
     "register-installation-p": "Registre su instalación para poder actualizar plugins de pago o privados.",
