--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -940,7 +940,7 @@
     "maximum-amount-without-cifnif": "Gehieneko zenbatekoa IFK\/IFZ gabe",
     "maximum-stock": "Stock maximoa",
     "may": "Maiatza",
-    "media-whatsapp-not-upload": "Errorea multimedia fitxategia WhatsApp zerbitzari igoan: %file%",
+    "media-whatsapp-not-upload": "Errorea multimedia fitxategia WhatsApp zerbitzarira igoan: %file%",
     "mega-search": "MegaBilaketa",
     "memcache": "Memcache",
     "memcache-clear": "Memcache garbituta.",
@@ -1619,7 +1619,7 @@
     "valid-for-day": "Egunerako baliozkotua",
     "validate": "Balioztatu",
     "validate-iban": "IBAN-a baieztatu",
-    "validate-whatsapp-not-connection": "WhatsApp zenbakia balioztatzen errore bat egon da, ezin izan da WhatsApp zerbitzariarekin konexioa ezarri",
+    "validate-whatsapp-not-connection": "WhatsApp zenbakia balioztatzen errore bat egon da, ezin izan da WhatsApp zerbitzariarekin konexioa ezarri.",
     "valuation-type": "Balorazio mota",
     "value": "Balioa",
     "value-x": "X balioa",
