--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -1365,7 +1365,7 @@
     "sent-a-picture": "Enviou uma imagem",
     "sent-a-video": "Enviou um vídeo",
     "sent-message-by": "Enviado por %nick% em %date%",
-    "sent-messages": "Mensajes enviados",
+    "sent-messages": "Mensagens enviadas",
     "sepa-suffix": "Sufixo SEPA",
     "september": "Setembro",
     "sequences": "Sequências",
