--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -1139,7 +1139,7 @@
     "period": "Periodo",
     "personalized": "Personalitzat",
     "pgsql-endpoint": "Endpoint PostgreSQL",
-    "pgsql-ssl-mode": "Modo SSL",
+    "pgsql-ssl-mode": "Mode SSL",
     "phase": "phase",
     "phone": "Teléfon",
     "phone2": "Teléfon 2",
