--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -606,7 +606,7 @@
     "field-required": "Campo obrigatório: %field%",
     "fields": "Campos",
     "file": "Arquivo",
-    "file-audio-codec-not-accepted": "Erro ao enviar o arquivo de áudio %fileName% porque o seu codec %codec% não está autorizado. Os codecs permitidos são: %supported%",
+    "file-audio-codec-not-accepted": "Erro ao enviar o arquivo de áudio %fileName% porque o seu codec %codec% não está permitido. Os codecs permitidos são: %supported%",
     "file-extension-not-accepted": "Erro ao enviar o arquivo %fileName% porque a sua extensão não é permitida. As extensões permitidas são: %accepted%",
     "file-name": "Nome do ficheiro",
     "file-not-exists": "O Ficheiro não existe: %fileName%",
@@ -1365,7 +1365,7 @@
     "sent-a-picture": "Enviou uma imagem",
     "sent-a-video": "Enviou um vídeo",
     "sent-message-by": "Enviado por %nick% em %date%",
-    "sent-messages": "Mensajes enviados",
+    "sent-messages": "Mensagens enviadas",
     "sepa-suffix": "Sufixo SEPA",
     "september": "Setembro",
     "sequences": "Sequências",
