Actualizadas las traducciones.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -1139,7 +1139,7 @@
     "period": "Periodo",
     "personalized": "Personalizované",
     "pgsql-endpoint": "Endpoint PostgreSQL",
-    "pgsql-ssl-mode": "Modo SSL",
+    "pgsql-ssl-mode": "Režim SSL PostgreSQL",
     "phase": "Fase",
     "phone": "Teléfono",
     "phone2": "Teléfono 2",
@@ -1619,7 +1619,7 @@
     "valid-for-day": "Platný po dobu jednoho dne",
     "validate": "Ověřit",
     "validate-iban": "Ověřit IBAN",
-    "validate-whatsapp-not-connection": "Chyba při ověřování čísla WhatsApp, nebylo možné navázat spojení se serverem WhatsApp",
+    "validate-whatsapp-not-connection": "Chyba při ověřování čísla WhatsApp, nebylo možné navázat spojení se serverem WhatsApp.",
     "valuation-type": "Tipo de valoración",
     "value": "Valor",
     "value-x": "Valor X",
