--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -1002,7 +1002,7 @@
     "nature": "Natureza",
     "need-help-password": "Você precisa ajuda com a sua senha?",
     "negative-balance": "Saldo Negativo",
-    "net": "Líquido",
+    "net": "Neto",
     "new": "Novo",
     "new-acc-entry-line-p": "Você pode inserir uma linha digitando o código da subconta abaixo ou clicando no botão subcontas e selecionando uma subconta.",
     "new-address": "Nova endereço",
@@ -1119,7 +1119,7 @@
     "payment": "Pagamento",
     "payment-date": "Data de pagamento",
     "payment-days": "Dias de pagamento",
-    "payment-method": "Método de pagamento",
+    "payment-method": "Forma de pagamento",
     "payment-methods": "Métodos de pagamento",
     "payments": "Pagamentos",
     "pct": "% pct",
@@ -1391,7 +1391,7 @@
     "short-name": "Nome Curto",
     "show": "Mostrar",
     "show-balance-graphic": "Mostrar gráficos em lançamentos",
-    "show-crm-warnings": "Mostrar avisos CRM",
+    "show-crm-warnings": "Mostrar avisos de CRM",
     "show-expired-receipts": "Mostrar recibos expirados",
     "show-month-stats": "Mostrar estatísticas mensais",
     "show-pending-remittances": "Mostrar remessas pendentes",
