--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -1139,7 +1139,7 @@
     "period": "Período",
     "personalized": "Personalizado",
     "pgsql-endpoint": "Endpoint PostgreSQL",
-    "pgsql-ssl-mode": "Modo SSL",
+    "pgsql-ssl-mode": "Modo SSL PostgreSQL",
     "phase": "Fase",
     "phone": "telefone",
     "phone2": "Telefone 2",
@@ -1619,7 +1619,7 @@
     "valid-for-day": "Válido por um dia",
     "validate": "Validar",
     "validate-iban": "Validar IBAN",
-    "validate-whatsapp-not-connection": "Erro ao validar o número do WhatsApp, não foi possível estabelecer conexão com o servidor do WhatsApp",
+    "validate-whatsapp-not-connection": "Erro ao validar o número do WhatsApp, não foi possível estabelecer conexão com o servidor do WhatsApp.",
     "valuation-type": "Tipo de avaliação",
     "value": "Valor",
     "value-x": "Valor X",
