Actualizadas las traducciones.

--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -743,7 +743,7 @@
     "iban": "IBAN",
     "icon": "Ikona",
     "id": "Id.",
-    "idaccount": "Id. Cuenta",
+    "idaccount": "Id. Konto",
     "idem-wildcard-info": "Skopiuj wartość z poprzedniego wiersza",
     "image": "Obraz",
     "images": "Obrazy",
