Actualizadas las traducciones.

--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -734,7 +734,7 @@
     "hint-vat-register": "Ver\/Modificar registro de IVA",
     "history": "Histórico",
     "homepage": "Página inicial",
-    "host": "Hospedeiro",
+    "host": "Host",
     "hour": "Hora",
     "hours": "Horas",
     "http": "HTTP",
