--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -606,7 +606,7 @@
     "field-required": "Campo requerido: %field%",
     "fields": "Campos",
     "file": "Arquivo",
-    "file-audio-codec-not-accepted": "Erro ao enviar o ficheiro de audio %fileName% porque o seu códec %codec% non está permitido. Os códecs permitidos son: %supported%",
+    "file-audio-codec-not-accepted": "Erro ao enviar o arquivo de audio %fileName% porque o seu códec %codec% non está permitido. Os códecs permitidos son: %supported%",
     "file-extension-not-accepted": "Erro ó enviar o arquivo %fileName% porque a súa extensión non está permitida. As extensións permitidas son: %accepted%",
     "file-name": "Nome de arquivo",
     "file-not-exists": "O arquivo non existe %fileName%",
@@ -940,7 +940,7 @@
     "maximum-amount-without-cifnif": "Máximo importe sen CIF\/NIF",
     "maximum-stock": "Máximo stock",
     "may": "Maio",
-    "media-whatsapp-not-upload": "Erro ao subir o ficheiro multimedia ao servidor de WhatsApp: %file%",
+    "media-whatsapp-not-upload": "Erro ao subir o arquivo multimedia ao servidor de WhatsApp: %file%",
     "mega-search": "MegaProcurador",
     "memcache": "Memcache %s",
     "memcache-clear": "Memcache eliminado.",
