--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1619,7 +1619,7 @@
     "valid-for-day": "Gültig für einen Tag",
     "validate": "bestätigen",
     "validate-iban": "IBAN bestätigen",
-    "validate-whatsapp-not-connection": "Fehler bei der Validierung der WhatsApp-Nummer, konnte keine Verbindung zum WhatsApp-Server herstellen",
+    "validate-whatsapp-not-connection": "Fehler bei der Validierung der WhatsApp-Nummer, keine Verbindung zum WhatsApp-Server möglich",
     "valuation-type": "Bewertungsart",
     "value": "Wert",
     "value-x": "Wert-x",
