--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -153,7 +153,7 @@
     "bank-mandate-date": "Data do mandato",
     "banking-movements": "Movimentos bancários",
     "barcode": "Código de barras",
-    "bcc": "BCC",
+    "bcc": "CCO",
     "become-sponsor": "Torne-se patrocinador",
     "big": "Grande",
     "billing": "Faturação",
