Actualizados controladores y traducciones.

--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -940,7 +940,7 @@
     "maximum-amount-without-cifnif": "Gehieneko zenbatekoa IFK\/IFZ gabe",
     "maximum-stock": "Stock maximoa",
     "may": "Maiatza",
-    "media-whatsapp-not-upload": "Errorea multimedia fitxategia WhatsApp zerbitzarira igoan: %file%",
+    "media-whatsapp-not-upload": "Errorea multimedia fitxategia WhatsApp zerbitzarian igoan: %file%",
     "mega-search": "MegaBilaketa",
     "memcache": "Memcache",
     "memcache-clear": "Memcache garbituta.",
@@ -1342,7 +1342,7 @@
     "second-trimester": "Bigarren hiruhilekoa",
     "select": "Aukeratu",
     "select-all": "Guztiak hautatu",
-    "select-content-for": "%content%-rako edukia hautatu",
+    "select-content-for": "%content%-erako edukia hautatu",
     "select-none": "Bat ere ez hautatu",
     "select-plugin-zip-file": "Hautatu plugin zip fitxategia:",
     "select-user": "Aukeratu erabiltzailea",
