--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -1078,7 +1078,7 @@
     "optional": "opcional",
     "options": "Opções",
     "options-button-header": "Maquetação e permissões",
-    "order": "Ordem",
+    "order": "Pedido",
     "order-email-subject": "O seu pedido %code%",
     "order-email-text": "Olá, vai anexo a sua Nota de Encomenda\/Pedido %code%",
     "orders": "Pedidos",
