Pequeñas correcciones a la clase de MyFilesToken y actualizadas las traducciones.

--- a/Core/Translation/es_ES.json
+++ b/Core/Translation/es_ES.json
@@ -1015,7 +1015,7 @@
     "new-supplier": "Nuevo proveedor",
     "news": "Noticias",
     "next": "Siguiente",
-    "nick": "Apodo",
+    "nick": "Usuario",
     "no": "No",
     "no-data": "Sin datos",
     "no-data-received-form": "Ningún dato recibido por formulario",
