--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -1503,9 +1503,9 @@
     "tables": "Táboas",
     "task": "Tarefa",
     "tasks": "Tarefas",
-    "tasks-completed-title": "Tarefa-solid completadas",
+    "tasks-completed-title": "Tarefas completadas",
     "tasks-component-title": "Tarefas",
-    "tasks-personal-title": "Tarefa-solid persoais",
+    "tasks-personal-title": "Tarefas persoais",
     "tax": "Imposto",
     "tax-area": "Zona de impostos",
     "tax-areas": "zonas de impostos",
