--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -1503,9 +1503,9 @@
     "tables": "Tabelas",
     "task": "Tarefa",
     "tasks": "Tarefas",
-    "tasks-completed-title": "Tarefa-solid concluídas",
+    "tasks-completed-title": "Tarefas concluídas",
     "tasks-component-title": "Tarefas",
-    "tasks-personal-title": "Tarefa-solid pessoais",
+    "tasks-personal-title": "Tarefas pessoais",
     "tax": "Imposto",
     "tax-area": "Área de impostos",
     "tax-areas": "Áreas de impostos",
@@ -1587,7 +1587,7 @@
     "unit-profit": "lucro unitário",
     "unit-purchase-price": "Preço de compra por unidade",
     "unit-sale-price": "Preço de venda unit.",
-    "unlimited": "Ilimitado",
+    "unlimited": "Sem limites",
     "unlink": "Desvincular",
     "unlink-file": "Desvincular arquivo",
     "unlink-install-ok": "Instalação excluída do registro corretamente.",
