--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -1503,9 +1503,9 @@
     "tables": "Tabelas",
     "task": "Tarefa",
     "tasks": "Tarefas",
-    "tasks-completed-title": "Tarefa-solid finalizadas",
+    "tasks-completed-title": "Tarefas finalizadas",
     "tasks-component-title": "Tarefas",
-    "tasks-personal-title": "Tarefa-solid pessoais",
+    "tasks-personal-title": "Tarefas pessoais",
     "tax": "Imposto",
     "tax-area": "Área fiscal",
     "tax-areas": "Áreas fiscais",
@@ -1587,7 +1587,7 @@
     "unit-profit": "Lucro unitário",
     "unit-purchase-price": "Preço de compra unitário",
     "unit-sale-price": "Preço de venda unit.",
-    "unlimited": "Ilimitado",
+    "unlimited": "Sem limites",
     "unlink": "Desvincular",
     "unlink-file": "Desvincular arquivo",
     "unlink-install-ok": "Instalação removida do registro corretamente.",
