--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -1138,7 +1138,7 @@
     "percentage-vat": "% Impuesto",
     "period": "Periodo",
     "personalized": "Personalizované",
-    "pgsql-endpoint": "Bezpečnostní brána PostgreSQL",
+    "pgsql-endpoint": "Konečný bod PostgreSQL",
     "pgsql-ssl-mode": "Režim SSL PostgreSQL",
     "phase": "Fase",
     "phone": "Teléfono",
