- Solucionado bug al marcar como seleccionados valores como el 0. - Actualizadas las traducciones.

--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -1078,7 +1078,7 @@
     "optional": "opcional",
     "options": "Opções",
     "options-button-header": "Maquetação e permissões",
-    "order": "Ordem",
+    "order": "Pedido",
     "order-email-subject": "O seu pedido %code%",
     "order-email-text": "Olá, vai anexo a sua Nota de Encomenda\/Pedido %code%",
     "orders": "Pedidos",
@@ -1587,7 +1587,7 @@
     "unit-profit": "lucro unitário",
     "unit-purchase-price": "Preço de compra por unidade",
     "unit-sale-price": "Preço de venda unit.",
-    "unlimited": "Ilimitado",
+    "unlimited": "Sem limites",
     "unlink": "Desvincular",
     "unlink-file": "Desvincular arquivo",
     "unlink-install-ok": "Instalação excluída do registro corretamente.",
