--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -1587,7 +1587,7 @@
     "unit-profit": "Lucro unitário",
     "unit-purchase-price": "Preço de compra unitário",
     "unit-sale-price": "Preço de venda unit.",
-    "unlimited": "Ilimitado",
+    "unlimited": "Sem limites",
     "unlink": "Desvincular",
     "unlink-file": "Desvincular arquivo",
     "unlink-install-ok": "Instalação removida do registro corretamente.",
